@@ -14,6 +14,7 @@
         - Sam's Journey loader
         - allow comments in swap lists
         - disable P00 header for .crt and .tcrt
+        - support mounting certain D41 images with more than 35 tracks
 
 2012-02-26 - release 0.10.3
         - Bugfix: Un-break I2C display communication
